--- a/bubble/index.html
+++ b/bubble/index.html
@@ -4,16 +4,36 @@
         <meta charset="utf-8" />
         <meta name="description" content="" />
         <title>Income and Life Expectancy</title>
-        <style>
-            circle {
-                stroke: #333;
-                stroke-opacity: 0.7;
-            }
-        </style>
+        <link rel="stylesheet" href="css/bootstrap.min.css" />
+        <link rel="stylesheet" href="css/main.css" />
     </head>
 
     <body>
-        <div id="chart-area"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <button id="play-button" class="btn btn-primary">
+                        Pause</button
+                    ><button id="reset-button" class="btn btn-secondary">
+                        Reset
+                    </button>
+                </div>
+                <div class="col-sm-6">
+                    <select id="continent-select" class="form-control">
+                        <option selected value="all">All</option>
+                        <option value="europe">Europe</option>
+                        <option value="asia">Asia</option>
+                        <option value="americas">Americas</option>
+                        <option value="africa">Africa</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="chart-area"></div>
+                </div>
+            </div>
+        </div>
 
         <!-- External JS libraries -->
         <script src="js/d3.min.js"></script>
