--- a/bubble/index.html
+++ b/bubble/index.html
@@ -45,6 +45,6 @@
         <script src="js/jquery.min.js"></script>
         <script src="js/jquery-ui.min.js"></script>
         <!-- Custom JS -->
-        <script src="js/main.js"></script>
+        <script src="js/main.js?v=01"></script>
     </body>
 </html>
